
===========
Changes log  
===========


@version-full@ (@release-date@)
[Bugs fixed]
 - Fixed Javadoc issue in Reference.setQuery. Reported by Avi Flax.
 - Fixed bug with the nsis ant task that requires the path to the 
   "makensis" executable with NSIS 2.28.
 - Clarified Javadocs for Directory about the modification mode. Suggested by Chuck Hinson.

[Enhancements] 
 - 

1.0.2 (2007-06-20)
[Bugs fixed]
 - The Component was not correctly detecting the connectors necessary for the
   attached applications, resulting in invalid log messages. Reported by Yuri de Wit.
 - If NRE's HttpRequest.setEntity() method is invoked before the first getEntity() call,
   subsequent getEntity() calls now return the entity set. Reported by Jonathan Hall.
 - Fixed potential NPE with null passwords in ChallengeResponse. Reported by Yuri de Wit.
 - Fixed several issues in the CLAP client (based on classloaders). Reported by Heinrich Klobuczek.
 - ByteUtils now knows how to write representations to non-blocking NIO channels.
 - The CLAP client (ClassLoader Access Protocol) was unexpectedly exposing partial directory content
   when the classloader is based on some local directories. Reported by Heinrich Klobuczek.
 - Fixed bug in the internal HTTP connector causing the returning of a wrong status code.
 - Overrided the StringRepresentation#setCharacterSet method, in order to refresh the 
   size of the representation. Reported by Calvin Cheng.
 - Fixed bug causing Component to not use the StatusService.getStatus() method. Reported
   by Adam Taft.
 - Fixed bug in ServletConverter causing the caching of the base URI and inability to handle
   request with various base URI style (IP address and domain names for example). Report by Ryan Daum.
 - Fixed bug in DomRepresentation causing the loss of both public and system DocTypes. 
   Reported by Lee Saferite.
 - Fixed bug causing the Request.challengeResponse to be overriden after a setChallengeResponse() call