@@ -10,6 +10,7 @@ Changes log
  - Fixed bug with the nsis ant task that requires the path to the 
    "makensis" executable with NSIS 2.28.
  - Clarified Javadocs for Directory about the modification mode. Suggested by Chuck Hinson.
+ - Clarified Javadocs for OutputRepresentation. Suggested by Jon Lachelt.
 
 [Enhancements] 
  - 
